# finalpr

./: .env.example  .gitignore  README.en.md  README.md  app.py  config.py  messages.pot  pyproject.toml  requirements-dev.txt  requirements.txt
.tmp_kpick/: kpick_oauth-0.3.0-py3-none-any.whl
docs/en/: README.md  configuration.md  deployment.md  localization.md  migrations.md  mongodb.md  oauth.md  ollama-production.md  setup.md  testing.md
docs/ko/: README.md  configuration.md  deployment.md  localization.md  migrations.md  mongodb.md  oauth.md  ollama-production.md  setup.md  testing.md
extensions/: i18n.py  oauth.py
models/: guestbook.py  oauth_identity.py  review.py  saved_course.py  spot.py  user.py
routes/: __init__.py  admin.py  auth.py  courses.py  language.py  main.py  oauth.py  reviews.py  spots.py
scripts/: check_doc_links.py
services/: auth_service.py  llm_client.py  llm_service.py  migrations.py  redirect_safety.py  tour_api.py
static/css/: style.css
static/js/: liquid-bg.js  main.js
templates/: base.html  courses.html  dashboard.html  index.html  my_courses.html  regions.html
templates/admin/: db_edit.html  db_manage.html
templates/auth/: login.html  register.html
templates/macros/: auth.html  language.html  ui.html
templates/reviews/: index.html  write.html
templates/spots/: api_detail.html  create.html  detail.html  edit.html  list.html
tests/: conftest.py  test_auth.py  test_auth_service.py  test_catalogs.py  test_i18n.py  test_oauth_routes.py  test_redirect_safety.py  test_rendering.py
(+4 files in other folders)
